home finding z-index fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -119,7 +119,7 @@ body {overflow-x:hidden;}
 // Page Styles =============================================================
 
 .home-findings{
-    margin-top:-120px;
+    position:relative; margin-top:-120px; z-index:5;
     .item {
         border:0px; box-shadow:0px 0px 5px rgba(0,0,0,0.3); background:white;
     }
